syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.models";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message Balance {
  int32 amount = 1;
}

service BankService {
  rpc getBalance(BalanceCheckRequest) returns (Balance);
  rpc withdraw(WithdrawRequest) returns (stream WithdrawResponse);
  rpc deposit(stream DepositRequest) returns (Balance);
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message WithdrawResponse {
  int32 withdrawnAmount = 1;
}

message DepositRequest{
  int32 account_number = 1;
  int32 amount = 2;
}


