syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.models";

message TransferRequest{
  int32 from_account = 1;
  int32 to_account = 2;
  int32 transfer_amount = 3;
}

message AccountBalance{
  int32 account_number = 1;
  int32 account_balance = 2;
}

enum TransferStatus{
  SUCCESS = 0;
  FAILED = 1;
}

message TransferResponse{
  TransferStatus status = 1;
  repeated AccountBalance account_balances = 2;
}

service TransferService{
  rpc transfer(stream TransferRequest) returns (stream TransferResponse);
}